<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.eclipse.lyo.samples.clients</groupId>
  <artifactId>lyo-client-samples</artifactId>
  <version>4.0.0-SNAPSHOT</version>
  <name>Lyo Client samples</name>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.release>17</maven.compiler.release>
    <v.lyo>7.0.0-SNAPSHOT</v.lyo>
    <v.jena>4.10.0</v.jena>
    <v.jersey>3.1.10</v.jersey> <!--same
        as refimpl-->
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.6.1</version>
          <executions>
            <execution>
              <id>enforce-maven</id>
              <goals>
                <goal>enforce</goal>
              </goals>
              <configuration>
                <rules>
                  <requireMavenVersion>
                    <version>3.8.1</version>
                  </requireMavenVersion>
                  <requireJavaVersion>
                    <version>17</version>
                  </requireJavaVersion>
                  <bannedDependencies>
                    <excludes>
                      <exclude>xerces</exclude>
                      <exclude>xml-apis</exclude>
                      <exclude>com.sun.xml.bind:jaxb-impl</exclude>

                      <!-- https://github.com/eclipse/lyo/pull/220 -->
                      <exclude>log4j:log4j</exclude>
                      <exclude>org.apache.logging.log4j:log4j-core</exclude>
                    </excludes>
                  </bannedDependencies>
                  <banDuplicatePomDependencyVersions />
                  <requireUpperBoundDeps>
                    <excludes>
                      <!--jersey
                      and jena via commons-compress-->
                      <exclude>org.osgi:org.osgi.core</exclude>
                    </excludes>
                  </requireUpperBoundDeps>
                  <reactorModuleConvergence>
                    <message>The reactor is not valid</message>
                    <ignoreModuleDependencies>false</ignoreModuleDependencies>
                  </reactorModuleConvergence>
                </rules>
                <fail>true</fail>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>


    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.46.1</version>
        <executions>
          <execution>
            <id>auto-style</id>
            <goals>
              <goal>apply</goal>
            </goals>
            <!-- Using validate phase, so this happens before enforce-style -->
            <phase>validate</phase>
          </execution>
        </executions>
        <configuration>
          <!-- optional: limit format enforcement to just the files changed by this
                    feature branch -->
          <!--                    <ratchetFrom>origin/main</ratchetFrom>-->
          <formats>
            <!-- you can define as many formats as you want, each is independent -->
            <format>
              <!-- define the files to apply to -->
              <includes>
                <include>.gitattributes</include>
                <include>.gitignore</include>
              </includes>
              <!-- define the steps to apply to those files -->
              <trimTrailingWhitespace />
              <endWithNewline />
              <indent>
                <tabs>true</tabs>
                <spacesPerTab>4</spacesPerTab>
              </indent>
            </format>
          </formats>
          <!-- define a language-specific format -->
          <java>
            <!-- apply a specific flavor of google-java-format and reflow long strings -->
            <googleJavaFormat>
              <version>1.27.0</version>
              <style>AOSP</style>
              <reflowLongStrings>true</reflowLongStrings>
              <formatJavadoc>false</formatJavadoc>
            </googleJavaFormat>
          </java>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.eclipse.lyo</groupId>
        <artifactId>lyo-bom</artifactId>
        <version>${v.lyo}</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>jakarta.ws.rs</groupId>
      <artifactId>jakarta.ws.rs-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.core</groupId>
      <artifactId>jersey-common</artifactId>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.core</groupId>
      <artifactId>jersey-client</artifactId>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.connectors</groupId>
      <artifactId>jersey-apache-connector</artifactId>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.media</groupId>
      <artifactId>jersey-media-multipart</artifactId>
    </dependency>
    <dependency>
      <groupId>org.eclipse.lyo.oslc4j.core</groupId>
      <artifactId>lyo-core-model</artifactId>
    </dependency>
    <dependency>
      <groupId>org.eclipse.lyo.oslc4j.core</groupId>
      <artifactId>lyo-core-settings</artifactId>
    </dependency>
    <dependency>
      <groupId>org.eclipse.lyo.oslc4j.core</groupId>
      <artifactId>oslc4j-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.eclipse.lyo.oslc4j.core</groupId>
      <artifactId>oslc4j-jena-provider</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.eclipse.lyo.clients</groupId>
      <artifactId>oslc-client</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpcore</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
    </dependency>
    <dependency>
      <!-- legacy, not planned for BOM -->
      <groupId>org.eclipse.lyo.clients</groupId>
      <artifactId>oslc-java-client-resources</artifactId>
      <version>${v.lyo}</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.lyo.server</groupId>
      <artifactId>net.oauth.core-oauth-jakarta</artifactId>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>
    <dependency>
      <!--reload4j
            addresses security problems in log4j1-->
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-reload4j</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.20.0</version>
    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.10.0</version>
    </dependency>

  </dependencies>

  <repositories>
    <repository>
      <name>Central Portal Snapshots</name>
      <id>central-portal-snapshots</id>
      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>
</project>